# locus-shell

./: .gitignore  AGENTS.md  AGS_REFERENCE.md  ARCHITECTURE.puml  Cargo.toml  LOCUS_MIGRATION.md  LOG.md  PLAN.md  PROJECT.md  SOURCE_API.md  TODO.md  WORKLOG.md
ags-migration/: README.md  inventory.md  summary.md  widget-graph.md
ags-migration/docs/widgets/: README.md  agent-approvals.md  app-runtime.md  bar.md  osd.md
ags-migration/migration/widgets/: README.md  agent-approvals.md  app-runtime.md  bar.md  osd.md  system-indicators.md
ags-migration/missing-shell-features/: README.md  audio-endpoint-provider.md  bluetooth-bluez-battery-providers.md  brightness-provider.md  carousel-widget.md  cli-request-bridge.md  command-action-provider.md  consumer-request-service.md  cross-widget-actions.md  custom-level-meter-widget.md  dbus-method-commands.md  dbus-object-manager-provider.md  derived-locus-collections.md  derived-provider-combinators.md  dynamic-child-lists.md  dynamic-css-reload.md  dynamic-provider-collections.md  file-watch-provider.md  gtksourceview-integration.md  keyboard-hints-bridge.md  keyboard-shortcuts.md  layer-shell-keyboard-mode.md  layer-window-monitor-rebinding.md  locus-graph-collection-providers.md  material-icon-asset-provider.md  monitor-list-provider.md  monitor-provider.md  mpris-provider.md  network-power-profile-providers.md  observable-source-composition.md  per-monitor-layer-surface-lifecycle.md  pomodoro-provider.md  popover-hover-reveal-bindings.md  process-output-provider.md  provider-stream-combinators.md  shared-provider-fanout-keys.md  shared-runtime-state.md  shared-source-fanout-keys.md  side-effect-runner.md  statusnotifier-tray-provider.md  (+5 more)
dbus/: Cargo.toml
dbus/src/: decode.rs  error.rs  lib.rs  schema.rs  test.rs  watch.rs
dev-widgets/: Cargo.toml
dev-widgets/src/: locus.rs  main.rs  primitives.rs
dev-widgets/src/locus_schema/: generated.rs  mod.rs
dev-widgets/src/primitives/: bar.rs  battery.rs  mod.rs  test.rs  window_rows.rs  window_title.rs
dev-widgets/stylesheets/: dev-widgets.scss
docs/audits/: locusfs-fuse-hang.md  shell-watch-paths.md  statusnotifier-dbusmenu.md
locus-graph/: Cargo.toml
locus-graph/src/: error.rs  lib.rs  test.rs
macros/: Cargo.toml
macros/src/locus_bindings/: component.rs  config.rs  expand.rs  mod.rs  test.rs  view.rs
provider/common/: Cargo.toml
provider/common/src/: lib.rs  test.rs  upower.rs
provider/core/: Cargo.toml
provider/core/src/: cancellation.rs  combine.rs  context.rs  error.rs  lib.rs  map.rs  runtime.rs  sender.rs  shared.rs  stream.rs  subscription.rs  switch.rs  test.rs
provider/dbus/: Cargo.toml
provider/dbus/src/: error.rs  lib.rs  property.rs  test.rs  watch.rs
provider/locus/: Cargo.toml  README.md
provider/locus/src/: binding.rs  error.rs  lib.rs  node.rs  test.rs  watch.rs
provider/locus/src/collection/: binding.rs  diff.rs  mod.rs  test.rs  watch.rs  workspace_windows.rs
provider/property/: Cargo.toml
providers/: Cargo.toml
providers/src/: cancellation.rs  lib.rs  map.rs  provider.rs  runtime.rs  test.rs
refactor/: agent-docs-paths.md  agent-macros.md  agent-rsynapse-consumer.md  agent-source-core.md  arbitration.md  common-providers.md  dbus-provider.md  dev-widgets.md  implementation-log.md  locus-provider.md  property-provider.md  providers.md  readme.md  shell-core.md  shell-macros.md
rsynapse-shell/: Cargo.toml
rsynapse-shell/config/locusfs/: config.toml
rsynapse-shell/src/: desktop_icon.rs  hints.rs  lib.rs  locusfs_paths.rs  main.rs  request.rs  theme.rs
rsynapse-shell/src/providers/: mod.rs
rsynapse-shell/src/providers/project_labels/: format.rs  hydrate.rs  mod.rs  provider.rs
rsynapse-shell/src/providers/windows/: hydrate.rs  mod.rs  provider.rs
rsynapse-shell/src/schema/: generated.rs  mod.rs
rsynapse-shell/src/sources/: AGENTS.md  audio.rs  battery.rs  locus.rs  mod.rs  network.rs  time.rs  watch.rs  windows.rs
rsynapse-shell/src/sources/windows/: mod.rs  source.rs
rsynapse-shell/src/widgets/: AGENTS.md  material_icon.rs  mod.rs
rsynapse-shell/src/widgets/bar/: agent_dbus.rs  agent_sessions.rs  audio.rs  battery.rs  mod.rs  mpris.rs  power_profile.rs  project_label.rs  source_errors.rs  window_source.rs  window_tile.rs  workspaces.rs
rsynapse-shell/src/widgets/bar/audio/: mod.rs  route_row.rs  source.rs
rsynapse-shell/src/widgets/bar/bluetooth/: mod.rs  source.rs
rsynapse-shell/src/widgets/bar/bzbus/: mod.rs  source.rs  test.rs  view.rs
rsynapse-shell/src/widgets/bar/network/: mod.rs
rsynapse-shell/src/widgets/bar/project_label/: mod.rs  source.rs
rsynapse-shell/src/widgets/bar/project_label/source/: agent.rs  agent_aggregate.rs  workspace_fallback.rs
rsynapse-shell/src/widgets/bar/systray/: mod.rs  source.rs  test.rs
rsynapse-shell/src/widgets/bar/window_tile/: agent.rs  mod.rs  source.rs
rsynapse-shell/src/widgets/bar/window_tile/agent/: mod.rs
rsynapse-shell/src/widgets/bar/window_tile/agent/source/: actual.rs  mock.rs  mod.rs
rsynapse-shell/src/widgets/notifications/: card.rs  center_row.rs  mod.rs  popup.rs  source.rs
rsynapse-shell/src/widgets/notifications/source/: grouping.rs  test.rs
rsynapse-shell/src/widgets/osd/: mod.rs  source.rs
rsynapse-shell/stylesheets/: bar.scss  gtk-colors.scss  notifications.scss  osd.scss  rsynapse-shell.scss  surfaces.scss
scripts/: dev-widgets-locus-schema  locus-graph-schema  locus-provider-schema
shell-core/: Cargo.toml
shell/background-effect/: Cargo.toml
shell/core/: Cargo.toml
shell/core/src/: app.rs  lib.rs  model.rs  runtime.rs
shell/core/src/css/: error.rs  fingerprint.rs  mod.rs  source.rs  test.rs
shell/core/src/list/: box_container.rs
shell/core/src/locus_path/: mod.rs
shell/core/src/source/: AGENTS.md  async_loop.rs  children.rs  children_events.rs  conversion.rs  legacy.rs  mod.rs  node.rs  property.rs  relation.rs  support.rs  watch.rs
shell/core/src/window/: config.rs  mod.rs  test.rs
standard-dbus/: Cargo.toml
standard-dbus/src/: test.rs  upower.rs
standard/dbus/: Cargo.toml
(+19 files in other folders)
