[workspace]
members = [
    "shell-core",
    "dev-widgets",
    "provider/core",
    "provider/locus",
    "provider/dbus",
    "macros",
    "standard-dbus",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
gtk = { package = "gtk4", version = "0.11.3" }
gtk4-layer-shell = "0.8.0"
dbus = { path = "provider/dbus" }
locus-graph = { path = "provider/locus" }
locus-macros = { path = "macros" }
providers = { path = "provider/core" }
relm4 = "0.11.0"
shell-core = { path = "shell-core" }
standard-dbus = { path = "standard-dbus" }
