[workspace]
members = [
    "shell/core",
    "dev-widgets",
    "provider/core",
    "provider/locus",
    "provider/dbus",
    "shell/macros",
    "standard/dbus",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
gtk = { package = "gtk4", version = "0.11.3" }
gtk4-layer-shell = "0.8.0"
dbus-provider = { path = "provider/dbus" }
locus-provider = { path = "provider/locus" }
providers = { path = "provider/core" }
relm4 = "0.11.0"
shell-core = { path = "shell/core" }
shell-macros = { path = "shell/macros" }
standard-dbus = { path = "standard/dbus" }
