[package]
name = "dev-widgets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
dbus-provider.workspace = true
locus-provider.workspace = true
providers.workspace = true
relm4.workspace = true
shell-core.workspace = true
shell-macros.workspace = true
common-providers = { workspace = true, features = ["upower"] }

[dev-dependencies]
futures = "0.3.32"
