[package]
name = "dev-widgets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-stream = "0.3.6"
dbus-provider.workspace = true
locus-provider.workspace = true
providers.workspace = true
relm4.workspace = true
shell-core.workspace = true
shell-macros.workspace = true
common-providers = { workspace = true, features = ["upower"] }
tokio = { version = "1.52.3", features = ["macros"] }
tokio-stream = "0.1.17"

[dev-dependencies]
futures = "0.3.32"
