[package]
name = "dev-widgets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
locusfs-watch = { path = "../../locusfs/watch", default-features = false, features = ["client"] }
relm4.workspace = true
shell-core.workspace = true
shell-macros.workspace = true

[dev-dependencies]
futures = "0.3.32"
