[package]
name = "rsynapse-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-util = "0.3.32"
locusfs-client = { path = "../../locusfs/locusfs-client" }
relm4.workspace = true
shell-core.workspace = true
shell-macros.workspace = true
tokio = { version = "1.52.3", features = ["fs", "time"] }
