[package]
name = "rsynapse-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-channel = "2.5.0"
futures-util = "0.3.32"
notify = "6.1.1"
relm4.workspace = true
shell-core.workspace = true
shell-macros.workspace = true
shell-rx-macros.workspace = true
tokio = { version = "1.52.3", features = ["fs", "time"] }
