[package]
name = "rsynapse-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "rsynapse-notifications"
path = "src/bin/rsynapse-notifications.rs"

[dependencies]
async-channel = "2.5.0"
futures-util = "0.3.32"
adw = { package = "libadwaita", version = "0.9.1" }
gtk4-background-effect.workspace = true
notify = "6.1.1"
relm4 = { workspace = true, features = ["libadwaita"] }
shell-core.workspace = true
shell-macros.workspace = true
shell-rx-macros.workspace = true
tokio = { version = "1.52.3", features = ["fs", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
pkg-config = "0.3.32"
