[package]
name = "providers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"

[dev-dependencies]
