[package]
name = "dbus-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-util = "0.3.32"
providers.workspace = true
tokio = { version = "1.52.3", features = ["macros"] }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }

[dev-dependencies]
futures = "0.3.32"
