[package]
name = "locus-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-util = "0.3.32"
locus-dbus = { path = "../../../locus/locus-dbus" }
providers.workspace = true
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }

[dev-dependencies]
futures = "0.3.32"
