[package]
name = "locus-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.32"
locus-dbus = { path = "../../../locus/locus-dbus" }
property-provider.workspace = true
providers.workspace = true
tokio = { version = "1.52.3", features = ["macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }

[dev-dependencies]
futures = "0.3.32"
