[package]
name = "shell-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-channel = "2.5.0"
gtk.workspace = true
gtk4-layer-shell.workspace = true
notify = "6.1.1"
providers.workspace = true
relm4.workspace = true
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "time"] }
